--- a/src/_config.yml
+++ b/src/_config.yml
@@ -22,13 +22,13 @@ title: grantharatna - Jewel of Books
 email: amiteshm0101@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Book lending/donation and volunteer-based teaching to underprivileged children.
-baseurl: "/src" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://grantharatna.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ~
 github_username:  grantharatna
 
 # Build settings
-remote_theme: pages-themes/cayman@v0.2.0
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-remote-theme
 
