--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -29,9 +29,10 @@ twitter_username:
 github_username:  grantharatna
 
 # Build settings
-theme: minima
+remote-theme: pages-theme/cayman@v0.2.0
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
