--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: grantharatna - Jewels of Books
-email: amiteshm0101@gmail.com
+email: grantharatna@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Homepage for the grantharatna project; empowering everyone with the quest for knowledge.
   
